--- a/.gitconfig
+++ b/.gitconfig
@@ -5,8 +5,8 @@
 	helper = cache --timeout=43200
 [core]
 	autocrlf = input
-[push]
-	default = simple
+#[push]
+#	default = simple
 [alias]
 	lg = log --pretty=format:\"%Cgreen %h %Cblue %ad %Creset | %s%d %Cred [%an]\" --graph --date=short
 	st = status
