--- a/.tmux.conf
+++ b/.tmux.conf
@@ -35,7 +35,23 @@ bind h split-window -v''
 set-option -g mouse on
 
 # move x clipboard into tmux paste buffer
-bind C-S-v run "tmux set-buffer \"$(xclip -o)\"; tmux paste-buffer"
+#bind C-p run "tmux set-buffer \"$(xclip -o)\"; tmux paste-buffer"
 # # move tmux copy buffer into x clipboard
-bind C-S-c run "tmux save-buffer - | xclip -i"
+#bind C-y run "tmux save-buffer - | xclip -i"
+#
+#bind-key C-y save-buffer /tmp/tmux-buffer \; run-shell "cat /tmp/tmux-buffer | xclip"
 
+
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+
+set -g @plugin 'tmux-plugins/tmux-yank'
+
+# Other examples:
+# set -g @plugin 'github_username/plugin_name'
+# set -g @plugin 'git@github.com/user/plugin'
+# set -g @plugin 'git@bitbucket.com/user/plugin'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
